# Live-Trading-and-Backtesting-Strategy

./: .env  .env.example  .gitignore  ARCHITECTURE.md  COMPLETION_SUMMARY.md  FINAL_CHECKLIST.txt  LIVE_TRADING_GUIDE.md  LOGGING_DEBUG_GUIDE.md  Makefile  QUICK_REFERENCE.md  README.md  pyproject.toml  requirements.txt  run_backtest.py  run_live.py  run_walkforward.py
.github/workflows/: ci.yml
config/: config.py
data/: backtest_trades.csv  historical_data.csv  test_trades.csv
docs/: METHODOLOGY.md  RESULTS.md
docs/assets/: backtest_report.html
logs/: test_signals.csv
scripts/: fetch_data.py  run_live_once.py  test_connection.py  verify_setup.py
src/backtesting/: analyzer.py  backtest.py  metrics.py  report.py  walk_forward.py
src/data/: __init__.py  pipeline.py
src/quant/: indicators.py  risk.py  signals.py
src/storage/: journal.py
src/strategy/: base.py  multi_tf.py  multitimeframe.py
src/trading/: exchange.py  executor.py  live_runner.py
src/utils/: data.py  indicator.py  logger.py  logging_config.py
tests/: test_indicators.py  test_metrics.py  test_risk.py  test_signals.py
